[profile.release]
panic = 'unwind'

[workspace]
members = [
	"merkle-distributor",
	"zenlink-protocol",
	"zenlink-protocol/rpc",
	"zenlink-protocol/rpc/runtime-api",
	"zenlink-stable-amm",
	"zenlink-stable-amm/rpc",
	"zenlink-stable-amm/rpc/runtime-api",
	"zenlink-swap-router",
]

resolver = "2"

[workspace.dependencies]
zenlink-protocol               = { path = "zenlink-protocol", default-features = false }
zenlink-protocol-runtime-api   = { path = "zenlink-protocol/rpc/runtime-api", default-features = false}
zenlink-stable-amm             = { path = "zenlink-stable-amm", default-features = false }
zenlink-stable-amm-runtime-api = { path = "zenlink-stable-amm/rpc/runtime-api", default-features = false }

codec                   = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hex-literal             = { version = "0.3.1" }
scale-info              = { version = "2.10.0", default-features = false, features = ["derive"] }
serde                   = { version = "1.0.189", default-features = false }
serde_json              = { version = "1.0.81", default-features = false  }
jsonrpsee               = { version = "0.22.5", features = ["server", "macros"] }
log                     = { version = "0.4.20", default-features = false }

cumulus-primitives-core = { version = "0.16.0", default-features = false }
frame-benchmarking      = { version = "38.0.0", default-features = false }
frame-support           = { version = "38.0.0", default-features = false }
frame-system            = { version = "38.0.0", default-features = false }
pallet-balances         = { version = "39.0.0", default-features = false }
pallet-timestamp        = { version = "37.0.0", default-features = false }
pallet-xcm              = { version = "17.0.0", default-features = false }
sp-api                  = { version = "34.0.0", default-features = false }
sp-arithmetic           = { version = "26.0.0", default-features = false }
sp-blockchain           = { version = "37.0.1", default-features = false }
sp-core                 = { version = "34.0.0", default-features = false }
sp-io                   = { version = "38.0.0", default-features = false }
sp-rpc                  = { version = "32.0.0", default-features = false }
sp-runtime              = { version = "39.0.1", default-features = false }
sp-std                  = { version = "14.0.0", default-features = false }
sp-version              = { version = "37.0.0", default-features = false }
xcm                     = { version = "14.2.0", package = "staging-xcm", default-features = false }
xcm-builder             = { version = "17.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor            = { version = "17.0.0", package = "staging-xcm-executor", default-features = false }

orml-tokens             = { git = "https://github.com/bifrost-io/open-runtime-module-library", branch = "release-polkadot-stable2409", default-features = false }
orml-traits             = { git = "https://github.com/bifrost-io/open-runtime-module-library", branch = "release-polkadot-stable2409", default-features = false }
